tdf#151548 sw content controls: add UI for Id and TabIndex
This is my first go at adding anything to the UI.
(I've done some fixing of other people's design,
but never created anything new myself.)

I took all my inspiration from Miklos'
d8d4e2e2de8911e476d71d72124dc6356c9d6c5d.

In the first iteration I did a fancy "same as id"
scenario. But ID-as-unsigned, securing unique IDs,
and English-only number recognition
sadly made me decide to drop the fancy features.

Now, both are simple, stand-alone spinbuttons
that depend on tooltips to guide user input, not fancy comboboxes.

It is important for the ID to display as unsigned,
since that is how it is used as a "name" in VBA.
It should be copy-pasteable for use in VBA programming.

It is useful for the TABINDEX to display as signed,
since it allows entering a -1 to disable tab navigation to the control.

make UITest_sw_ui_misc

Change-Id: Ia7c99888e60c33ac39616b24c7c1715604c3ec69
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147591
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>

--- a/sw/uiconfig/swriter/ui/contentcontroldlg.ui
+++ b/sw/uiconfig/swriter/ui/contentcontroldlg.ui
@@ -91,7 +91,7 @@
           </packing>
         </child>
         <child>
-          <!-- n-columns=2 n-rows=3 -->
+          <!-- n-columns=4 n-rows=3 -->
           <object class="GtkGrid">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
@@ -128,19 +128,6 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="taglabel">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="label" translatable="yes" context="contentcontroldlg|taglabel">Tag:</property>
-                <property name="mnemonic-widget">tagentry</property>
-                <property name="xalign">0</property>
-              </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">2</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkEntry" id="aliasentry">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
@@ -152,15 +139,99 @@
               </packing>
             </child>
             <child>
+              <object class="GtkLabel" id="idlabel">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="label" translatable="yes" context="contentcontroldlg|idlabel">Id:</property>
+                <property name="xalign">0</property>
+                <accessibility>
+                  <relation type="label-for" target="idspinbutton"/>
+                </accessibility>
+              </object>
+              <packing>
+                <property name="left-attach">0</property>
+                <property name="top-attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="tabindexlabel">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="label" translatable="yes" context="contentcontroldlg|tabindexlabel">Tab order:</property>
+                <accessibility>
+                  <relation type="label-for" target="tabindexspinbutton"/>
+                </accessibility>
+              </object>
+              <packing>
+                <property name="left-attach">2</property>
+                <property name="top-attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkSpinButton" id="idspinbutton">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="input-purpose">number</property>
+                <property name="input-hints">GTK_INPUT_HINT_NO_SPELLCHECK | GTK_INPUT_HINT_NO_EMOJI | GTK_INPUT_HINT_NONE</property>
+                <property name="snap-to-ticks">True</property>
+                <property name="numeric">True</property>
+                <property name="wrap">True</property>
+                <accessibility>
+                  <relation type="labelled-by" target="idlabel"/>
+                </accessibility>
+              </object>
+              <packing>
+                <property name="left-attach">1</property>
+                <property name="top-attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="taglabel">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="label" translatable="yes" context="contentcontroldlg|taglabel">Tag:</property>
+                <property name="mnemonic-widget">tagentry</property>
+                <property name="xalign">0</property>
+              </object>
+              <packing>
+                <property name="left-attach">2</property>
+                <property name="top-attach">1</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkEntry" id="tagentry">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="truncate-multiline">True</property>
               </object>
               <packing>
-                <property name="left-attach">1</property>
+                <property name="left-attach">3</property>
+                <property name="top-attach">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkSpinButton" id="tabindexspinbutton">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="primary-icon-tooltip-text" translatable="yes" context="contentcontroldlg:tabindexspinbutton">Keyboard tab navigation order: -1 to exclude from tab stop</property>
+                <property name="input-purpose">number</property>
+                <property name="input-hints">GTK_INPUT_HINT_NO_SPELLCHECK | GTK_INPUT_HINT_NO_EMOJI | GTK_INPUT_HINT_NONE</property>
+                <property name="snap-to-ticks">True</property>
+                <property name="numeric">True</property>
+                <accessibility>
+                  <relation type="labelled-by" target="tabindexlabel"/>
+                </accessibility>
+              </object>
+              <packing>
+                <property name="left-attach">3</property>
                 <property name="top-attach">2</property>
               </packing>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
             </child>
           </object>
           <packing>
