--- a/sw/uiconfig/swriter/ui/fldvarpage.ui
+++ b/sw/uiconfig/swriter/ui/fldvarpage.ui
@@ -402,7 +402,7 @@
                       <object class="GtkLabel" id="label5">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="label" translatable="yes" context="fldvarpage|label5">_Level:</property>
+                        <property name="label" translatable="yes" context="fldvarpage|label5">_Outline level:</property>
                         <property name="use-underline">True</property>
                         <property name="xalign">0</property>
                       </object>
@@ -429,13 +429,13 @@
                       <object class="GtkComboBoxText" id="level">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="tooltip-text" translatable="yes" context="fldvarpage|level|tooltip_text">Choose the maximum outline level of the heading number to prepend to the displayed field.</property>
+                        <property name="tooltip-text" translatable="yes" context="fldvarpage|level|tooltip_text">Choose the heading number to prepend to the displayed field, where the number comes from the first prior heading with the selected outline level. If “None” is selected, then no heading number is displayed.</property>
                         <items>
                           <item translatable="yes" context="fldvarpage|level">None</item>
                         </items>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="level-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="fldvarpage|extended_tip|level">Specify the number of outline levels to show before the displayed field.  The heading numbers are taken from the heading  immediately before with the specified outline level or less. If [None] is selected, then no heading number is displayed.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="fldvarpage|extended_tip|level">Choose the heading number to prepend to the displayed field. The number comes from the first prior heading with the selected outline level. For example, select “2” to use the heading number of the first prior heading with outline level 2. If “None” is selected, then no heading number is displayed. To use this option, heading numbers must be enabled. Use “Tools - Heading Numbering”.</property>
                           </object>
                         </child>
                       </object>
@@ -452,9 +452,10 @@
                         <property name="width-chars">2</property>
                         <property name="text" translatable="yes" context="fldvarpage|separator">.</property>
                         <property name="truncate-multiline">True</property>
+                        <property name="tooltip_text" translatable="yes" context="fldvarpage|separator|tooltip_text">Enter the character to use as a separator between the heading number and the field number.</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="separator-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="fldvarpage|extended_tip|separator">Type the character to use as a separator between the heading or chapter levels and the field.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="fldvarpage|extended_tip|separator">Enter the character to use as a separator between the heading number and the field number.</property>
                           </object>
                         </child>
                       </object>
@@ -469,7 +470,7 @@
                   <object class="GtkLabel" id="label4">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes" context="fldvarpage|label4">Numbering by Chapter</property>
+                    <property name="label" translatable="yes" context="fldvarpage|label4">With Heading Number Before</property>
                     <property name="use-underline">True</property>
                     <property name="xalign">0</property>
                     <attributes>
