Missing ":" for "Background color" option in Area/Hatch
Change-Id: I021c983337500adb0dce348e8b7e3f42a2316e62
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147736
Tested-by: Julien Nabet <serval2412@yahoo.fr>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>

--- a/cui/uiconfig/ui/hatchpage.ui
+++ b/cui/uiconfig/ui/hatchpage.ui
@@ -325,7 +325,7 @@
             </child>
             <child>
               <object class="GtkCheckButton" id="backgroundcolor">
-                <property name="label" translatable="yes" context="hatchpage|backgroundcolor">Background Color</property>
+                <property name="label" translatable="yes" context="hatchpage|backgroundcolor">Background Color:</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
