tdf#153589 expand combobox for main entry character style
Change-Id: Ic1cd023d23be3fdc97b604da0ed51a4f93b2b4c6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147849
Tested-by: Jenkins
Reviewed-by: Seth Chaiklin <sdc.blanco@youmail.dk>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/sw/uiconfig/swriter/ui/tocentriespage.ui
+++ b/sw/uiconfig/swriter/ui/tocentriespage.ui
@@ -821,6 +821,7 @@
                       <object class="GtkComboBoxText" id="mainstyle">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
+                        <property name="hexpand">True</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="mainstyle-atkobject">
                             <property name="AtkObject::accessible-description" translatable="yes" context="tocentriespage|extended_tip|mainstyle">Specify the character style for the main entries in the alphabetical index. To convert an index entry into a main entry, click in front of the index field in the document and then choose Edit - Index Entry.</property>
