tdf#97551 Added marker and hint for formula to Calc
Added option "Formula indicator and hint" to LibreOffice Calc > View section (near to "Comment indicator"). This option turned off by default to avoid interfere existing UX.

Indicator displays in the bottom-left corner as blue triangle marker if cells contains formula (correctly reacts on cells merging and different sizing).

Hint displays when user hover cursor over the cell that contains the formula (uses already built-in mechanics for help tooltip).

More details about request and discussion of the feature in Bugzilla.

Change-Id: I8f3e368d4fdad362b819b4ce2fd6b0c32b5c1c0f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147914
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/sc/uiconfig/scalc/ui/tpviewpage.ui
+++ b/sc/uiconfig/scalc/ui/tpviewpage.ui
@@ -79,6 +79,20 @@
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkCheckButton" id="formulamark">
+                    <property name="label" translatable="yes" context="tpviewpage|formulamark">_Formula indicator and hint</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="use-underline">True</property>
+                    <property name="draw-indicator">True</property>
+                  </object>
+                  <packing>
+                    <property name="left-attach">0</property>
+                    <property name="top-attach">3</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkCheckButton" id="value">
                     <property name="label" translatable="yes" context="tpviewpage|value">Value h_ighlighting</property>
                     <property name="visible">True</property>
@@ -94,7 +108,7 @@
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
-                    <property name="top-attach">3</property>
+                    <property name="top-attach">4</property>
                   </packing>
                 </child>
                 <child>
@@ -113,7 +127,7 @@
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
-                    <property name="top-attach">4</property>
+                    <property name="top-attach">5</property>
                   </packing>
                 </child>
                 <child>
@@ -132,7 +146,7 @@
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
-                    <property name="top-attach">5</property>
+                    <property name="top-attach">6</property>
                   </packing>
                 </child>
                 <child>
@@ -151,7 +165,7 @@
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
-                    <property name="top-attach">6</property>
+                    <property name="top-attach">7</property>
                   </packing>
                 </child>
               </object>
