tdf#148776 for scrolling set step size as height of a row
similar to FontFeaturesDialog.

FWIW gtk's viewport implementation automatically overwrites the step
size to be 10% of the visible height (and page size of 90% of the
visible height)

Change-Id: If356724a47b0a10069f129bed4a40cfdee57bfa8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148138
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/svx/uiconfig/ui/accessibilitycheckdialog.ui
+++ b/svx/uiconfig/ui/accessibilitycheckdialog.ui
@@ -97,7 +97,7 @@
             <property name="vexpand">True</property>
             <property name="orientation">vertical</property>
             <child>
-              <object class="GtkScrolledWindow">
+              <object class="GtkScrolledWindow" id="scrolledwindow">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="hexpand">True</property>
@@ -114,6 +114,8 @@
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
                         <property name="orientation">vertical</property>
+                        <property name="spacing">6</property>
+                        <property name="homogeneous">True</property>
                         <child>
                           <placeholder/>
                         </child>
